--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astro Games</title>
+    <title>Posidon Games</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7d33d53aa9.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="astro.jpg">
@@ -39,8 +39,8 @@
         <br>
         <br>
         <center>
-        <h1 id="title">Astro Games</h1>
-        <h4 style="text-align: center; margin-top: 10px;">By Jesse Sher</h1>
+        <h1 id="title">Posidon Games</h1>
+        <h4 style="text-align: center; margin-top: 10px;">By Skibidi</h1>
         <br>
         <br>
             <img src="astro.jpg" alt="astro" id="astro" style="width: 400px;">
